[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tok1d"
version = "0.1.0"
description = "1D tokenizers."
readme = "README.md"
requires-python = ">=3.8"
authors = [
]
classifiers=[
    "Natural Language :: English",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "numpy",
    "black",
    "flake8",
    "torch>=2.0.0",
    "torchvision",
    "omegaconf",
    "transformers",
    "timm",
    "open_clip_torch",
    "einops",
    "scipy",
    "pillow",
    "accelerate",
    "gdown",
    "huggingface-hub",
    "einops",
    "wandb",
    "torch-fidelity",
    "torchinfo",
    "webdataset"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
